[package]
name = "octExtractor"
version = "0.1.0"
edition = "2021"
authors = ["Jesus Blanco - witeDev"]
description = "A tool to extract images from OCT files"
license = "MIT"
repository = "https://github.com/witedev/octExtractor"

[dependencies]
image = "0.25.1"
jpeg2k = "0.7"
byteorder = "1.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "4.5.8", features = ["derive"] }

[profile.release]
opt-level = 3

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"